--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "currency.js": "^2.0.4",
         "flowbite": "^1.6.5",
         "install": "^0.13.0",
+        "quill": "^2.0.2",
         "vue": "^3.2.36",
         "vue-multiselect": "^3.0.0-beta.2"
     }
