--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "spatie/array-to-xml": "^3.2",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
