--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "install": "^0.13.0",
         "quill": "^2.0.2",
         "vue": "^3.2.36",
-        "vue-multiselect": "^3.0.0-beta.2"
+        "vue-multiselect": "^3.0.0-beta.2",
+        "vue-toast-notification": "^3.1.3"
     }
 }
